--- a/src/app/pages/leave/masters/list/mastersList.html
+++ b/src/app/pages/leave/masters/list/mastersList.html
@@ -94,6 +94,11 @@
 
                                     <label for="exampleUsername1" ng-bind="page.pageinfo.fields.LRCDrMaxDays.text"></label>
                                     <field-box page="page" ng-column="page.pageinfo.fields.LRCDrMaxDays" ng-entity="entity" form="editForm"></field-box>
+                                </div> 
+                                <div class="col-md-6">
+                                    <label ng-bind="page.pageinfo.fields.LRCMaxDrLimitDays.text"></label>
+                                    <field-box page="page" ng-column="page.pageinfo.fields.LRCMaxDrLimitDays" ng-entity="entity" form="editForm"></field-box>
+
                                 </div>
                                 <div class="col-md-6">
                                     <label ng-bind="page.pageinfo.fields.LRCDRMinDays.text"></label>
