--- a/src/app/pages/organization/employees/templates/salary/salary-view.html
+++ b/src/app/pages/organization/employees/templates/salary/salary-view.html
@@ -1,6 +1,6 @@
 
 
 <div >
-    <div id="djGrid1" ui-grid="salaryEntitleMent" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="djGrid">
+    <div id="djGrid1" ui-grid="gridOptions" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="djGrid">
     </div>
 </div>
