--- a/src/app/pages/payroll/masters/list/mastersList.html
+++ b/src/app/pages/payroll/masters/list/mastersList.html
@@ -1,2 +1,269 @@
-<grid-box ng-model="page">
+<grid-box ng-model="page" ng-hide="showEditForm">
 </grid-box>
+<form name="editForm" ng-submit="saveForm(editForm) " ng-show="showEditForm ">
+    <div class="panel panel-default xmedium-panel ">
+        <edit-panel-head page="page" page-title="page.pageinfo.title " reset-form="resetFormCommon(editForm) " clear-form="clearFormCommon(editForm) "
+            close-form="closeForm(editForm) " show-close="true " show-save="true " show-clear="true " show-list="false
+    " show-reset="true " condition="true "></edit-panel-head>
+
+        <div class="panel-body " style="padding:5px " ng-scrollbars ng-scrollbars-config="config ">
+
+
+
+            <div class="row">
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.LSCSCDId.text}}</label>
+                    <field-box page="page" ng-column="page.pageinfo.fields.LSCSCDId" ng-entity="entity" fb-change="clearEntity()" form="editForm"></field-box>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.LocationId.text}}</label>
+                    <field-box page="page" ng-column="page.pageinfo.fields.LocationId" ng-entity="entity" form="editForm"></field-box>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.BRId.text}}</label>
+                    <field-box page="page" ng-column="page.pageinfo.fields.BRId" ng-entity="entity" form="editForm"></field-box>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputPassword3">{{page.pageinfo.fields.LSCSUId.text}}</label>
+                    <field-box page="page" ng-column="page.pageinfo.fields.LSCSUId" ng-entity="entity" form="editForm"></field-box>
+                </div>
+            </div>
+
+            <div class="row" ng-if="entity.LSCSCDId=='1'">
+                <div class="form-group col-md-12">
+                    <h3 class="">Salary Generated On</h3>
+                    <hr>
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCEndOfMonth.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCEndOfMonth" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSInBetMonthId.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSInBetMonthId" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3" ng-if="entity.LSInBetMonthId">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFromDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFromDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3" ng-if="entity.LSInBetMonthId">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCToDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCToDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                    </div>
+                    <h3 class="">Salary Calculated On (For Day Based Salary) </h3>
+                    <hr>
+                    <div class="row">
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalDayInCycle" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalWorkingDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3" clas>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle" value="true">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay" value="true">
+                        </div>
+                        <div class="form-group col-md-3" ng-show="fixedDays">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixedDays.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixedDays" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCEffectedFrom.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCEffectedFrom" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCESIC.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCESIC" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+
+            <div class="row" ng-if="entity.LSCSCDId=='2'">
+                <div class="form-group col-md-12">
+                    <h3 class="">Select Day of Week for Weekly Salary</h3>
+                    <hr>
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCDayId.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCDayId" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                    </div>
+                    <h3 class="">Salary Calculated On (For Day Based Salary) </h3>
+                    <hr>
+                    <div class="row">
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalDayInCycle" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalWorkingDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+
+
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3" clas>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle" value="true">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay" value="true">
+                        </div>
+                        <div class="form-group col-md-3" ng-show="fixedDays">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixedDays.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixedDays" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCEffectedFrom.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCEffectedFrom" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCESIC.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCESIC" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+
+            <div class="row" ng-if="entity.LSCSCDId=='3'">
+                <div class="form-group col-md-12">
+                    <h3 class="">Select Day of Week for Fortnightly Salary</h3>
+                    <hr>
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCDayId.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCDayId" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                    </div>
+                    <h3 class="">Salary Calculated On (For Day Based Salary) </h3>
+                    <hr>
+                    <div class="row">
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalDayInCycle" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalWorkingDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3" clas>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle" value="true">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay" value="true">
+                        </div>
+                        <div class="form-group col-md-3" ng-show="fixedDays">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixedDays.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixedDays" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCEffectedFrom.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCEffectedFrom" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCESIC.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCESIC" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+
+            <div class="row" ng-if="entity.LSCSCDId=='4'">
+                <div class="form-group col-md-12">
+                    <h3 class="">Salary Calculated On (For Day Based Salary) </h3>
+                    <hr>
+                    <div class="row">
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalDayInCycle" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalWorkingDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixDay" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3" clas>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle" value="true">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay" value="true">
+                        </div>
+                        <div class="form-group col-md-3" ng-show="fixedDays">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixedDays.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixedDays" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCEffectedFrom.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCEffectedFrom" ng-entity="entity" form="editForm"></field-box>
+                        </div>
+                        <!--<div class="form-group col-md-3">
+                            <label for="inputPassword3">{{page.pageinfo.fields.LSCESIC.text}}</label>
+                            <field-box page="page" ng-column="page.pageinfo.fields.LSCESIC" ng-entity="entity" form="editForm"></field-box>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
