--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -92,6 +92,12 @@
               <field-box page="page" ng-column ="page.pageinfo.fields.JDOfficeExtention" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
             </div>
           </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.JDGroupId.text"></label>
+              <field-box page="page" ng-column ="page.pageinfo.fields.JDGroupId" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+            </div>
+          </div>
         </div>
         <!--this to be uncommented after adding columns in JobDescription:DJ-->
         <!--<div class="row">
