hide pending leaves:dj

--- a/src/app/pages/leave/transaction/employeeleaveapplication/leave.employeeleave.html
+++ b/src/app/pages/leave/transaction/employeeleaveapplication/leave.employeeleave.html
@@ -143,7 +143,7 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-12">
+                                            <div class="col-md-12" ng-hide="true">
                                                 <label>Previous Applications</label>
                                                 <table class="table table-responsive table-bordered table-hover table-condensed">
                                                     <thead>
